# haskell-sandbox

./: .gitignore  default.nix  package.yaml  sandbox.cabal  sandbox.nix  shell.nix  stack.yaml
src/: Sandbox.hs  aligned.hs  sandbox.hs
