name:                sandbox
version:             0.1.0.0
license:             Apache-2.0
license-file:        LICENSE
author:              Chris Martin
maintainer:          ch.martin@gmail.com
build-type:          Simple
cabal-version:       >=1.10

executable haskell-sandbox
  main-is:             sandbox.hs
  -- other-modules:
  build-depends:       base >=4.8 && <4.9
                     , QuickCheck
                     , checkers
  hs-source-dirs:      src
  default-language:    Haskell2010