name:           sandbox
version:        0.1.0.0
author:         Chris Martin
maintainer:     ch.martin@gmail.com
license:        Apache-2.0
build-type:     Simple
cabal-version:  >= 1.10

library
  default-language: Haskell2010
  hs-source-dirs: src

  exposed-modules: Sandbox
  other-modules: Paths_sandbox

  build-depends:
      aeson
    , base
    , containers
    , directory
    , scientific
    , semigroupoids
    , text
    , time
    , unordered-containers
    , vector
